# service-catalog

./: .gitignore  AGENT.md  AGENTS.md  README.md  catalog.json  mise.toml
.github/workflows/: pr-title.yml  publish-catalog-gen.yml  release.yml  validate.yml
AWS/mysql/8/: README.md  main.tf  outputs.tf  qbm.yml  variables.tf
AWS/postgres/14/: README.md  main.tf  qbm.yml  variables.tf
AWS/postgres/15/: README.md  main.tf  providers.tf  qbm.yml  variables.tf
AWS/postgres/16/: README.md  main.tf  qbm.yml
AWS/postgres/17/: README.md  main.tf  qbm.yml  variables.tf
AWS/s3/default/: README.md  main.tf  qbm.yml  variables.tf
HELM/rabbitmq/4/: README.md  qbm.yml  values.yaml
HELM/redis/7/: qbm.yml  values.yaml
HELM/redis/8/: README.md  qbm.yml  values.yaml
SCW/mysql/8/: README.md  main.tf  outputs.tf  providers.tf  qbm.yml  variables.tf
SCW/object-storage/default/: main.tf  qbm.yml  variables.tf
SCW/postgres/16/: README.md  main.tf  outputs.tf  qbm.yml  variables.tf
aws/mysql/8/: README.md  main.tf  qbm.yml  variables.tf
aws/postgres/17/: README.md  main.tf  outputs.tf  qbm.yml  variables.tf
aws/s3/default/: README.md  main.tf  outputs.tf  providers.tf  qbm.yml  variables.tf
helm/rabbitmq/4/: README.md  qbm.yml  values.yaml
helm/redis/7/: README.md  qbm.yml
scaleway/mysql/8/: README.md  providers.tf  qbm.yml  variables.tf
scaleway/object-storage/default/: README.md  main.tf  outputs.tf  qbm.yml  variables.tf
scaleway/postgres/16/: README.md  main.tf  qbm.yml  (+1 more)
tools/catalog-gen/: Cargo.toml  Dockerfile
tools/catalog-gen/src/: main.rs
