[package]
name = "catalog-gen"
version = "0.1.0"
edition = "2021"
description = "Generate catalog.json from QBM manifests and git tags"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
semver = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
regex = "1"
